# llm-Inferno

./: .gitignore  LICENSE  README.md
c/hellotensor/: CMakeLists.txt  hellotensor.c
c/helloworld/: CMakeLists.txt
notebooks/: 000-model_export_import.ipynb
notebooks/multi-gpu/pipeline-parallelism/001_WhyParallelism/: README.md
notebooks/multi-gpu/pipeline-parallelism/002_TransformerArchitectureGoingDeeper/: README.md
notebooks/multi-gpu/pipeline-parallelism/003_CommunicationPrimitives/: README.md
notebooks/multi-gpu/pipeline-parallelism/004_ModelPartitioning/: README.md
notebooks/multi-gpu/pipeline-parallelism/005_ExecutionEngine/: README.md
notebooks/multi-gpu/pipeline-parallelism/006_MemoryManagement/: README.md
notebooks/multi-gpu/pipeline-parallelism/007_BatchingAndScheduling/: README.md
notebooks/multi-gpu/pipeline-parallelism/008_Optimizations/: README.md
notebooks/multi-gpu/pipeline-parallelism/009_FaultHandlingAndMOnitoring/: README.md
notebooks/multi-gpu/pipeline-parallelism/010_APIDesignAndIntegration/: README.md
notebooks/multi-gpu/pipeline-parallelism/011_Misc/: README.md
